--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Inter, sans-serif;
+  font-family: karla, sans-serif;
 }
 
 /* Main container */
@@ -25,7 +25,7 @@ body{
 }
 
 .die-bt{
-  font-family: Inter, sans-serif;
+  font-family: karla, sans-serif;
   height: 50px;
   background-color: #FFFFFF;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
