--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body{
   margin: 2em;
   background-color: #F5F5F5;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
 }
 
 /* die container */
@@ -33,4 +38,15 @@ body{
   border: none;
   font-size: 1.75rem;
   cursor: pointer;
+}
+
+/* roll btn */
+.roll-btn{
+  background-color: #5035FF;
+  padding: 1em 2em;
+  color: white;
+  border-radius: .5em;
+  margin-top: 1em;
+  font-family: Karla, sans-serif;
+  border: none;
 }
